# DEX-Router-Solana-V1

./: .gitignore  Anchor.toml  Cargo.toml  HOW_SWAP_IS_CALLED.md  LEARNING_ROADMAP.md  LICENSE  MODULE_PURPOSES.md  README.md  TESTING_QUICKSTART.md  package-lock.json  package.json  phase2_examples.rs  phase2_roadmap.md  phase2_visual_guide.md  resource.md  study.md  tsconfig.json
programs/dex-solana/: Cargo.toml
programs/dex-solana/src/: allocator.rs  constants.rs  error.rs  lib.rs
programs/dex-solana/src/adapters/: aldrin.rs  boopfun.rs  byreal_clmm.rs  common.rs  dooar.rs  fluxbeam.rs  gavel.rs  goonfi.rs  goosefx.rs  heaven.rs  humidifi.rs  lifinity.rs  manifest.rs  meteora.rs  meteora_dbc.rs  mod.rs  moonit.rs  numeraire.rs  obric_v2.rs  one_dex.rs  openbookv2.rs  pancake_swap_v3.rs  perpetuals.rs  phoenix.rs  pumpfun.rs  pumpfunamm.rs  qualia.rs  raydium.rs  raydium_launchpad.rs  saber_decimal_wrapper.rs  sanctum.rs  sanctum_router.rs  saros.rs  sol_rfq.rs  solfi.rs  spl_token_swap.rs  stabble.rs  stable_swap.rs  sugar_money.rs  swaap.rs  (+6 more)
programs/dex-solana/src/global_config/instructions/: global_config.rs  mod.rs
programs/dex-solana/src/instructions/: claim.rs  commission_from_swap.rs  commission_proxy_swap.rs  commission_swap.rs  commission_v3.rs  commission_wrap_unwrap.rs  common_commission.rs  common_commission_v2.rs  common_swap.rs  create_token_account.rs  create_token_account_with_seed.rs  from_swap.rs  mod.rs  platform_fee_proxy_swap_v2.rs  platform_fee_wrap_unwrap_v2.rs  proxy_swap.rs  swap.rs  swap_v3.rs  wrap_unwrap_v3.rs
programs/dex-solana/src/limitorder/instructions/: cancel_order.rs  commission_fill_order.rs  fill_order.rs  mod.rs  place_order.rs  update_order.rs
programs/dex-solana/src/processor/: common_processor.rs  mod.rs  platform_fee_processor.rs  proxy_swap_processor.rs  swap_processor.rs  swap_tob_processor.rs  swap_toc_processor.rs
programs/dex-solana/src/state/: config.rs  event.rs  mod.rs  order.rs
programs/dex-solana/src/utils/: fee.rs  logging.rs  mod.rs  swap.rs  token.rs
rust_tutorial/: .gitignore  README.md
rust_tutorial/contract_roadmap/6.implementation/1.anchor_tutorial/fun-uniswap-v3/programs/fun-uniswap-v3/: Cargo.toml
scripts/: check-usdc-balance.ts  find_pool_accounts.ts  (+1 more)
(+170 files in other folders)
