[package]
name = "fun-uniswap-v3"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fun_uniswap_v3"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.0", features = ["token", "token_2022", "token_2022_extensions", "associated_token"] }
spl-math = "0.1.0"
spl-token = "7.0.0"
uint = { git = "https://github.com/raydium-io/parity-common", package = "uint" }

